# landing-page

./: .gitignore  README.md  __doc__.md  docker-compose.yml  main.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  railway.toml  requirements.txt  setup.py  vercel.json
api/: __init__.py  routes.py
backend/: Dockerfile  config.py  deps.py  main.py  requirements.txt  supabase_client.py
backend/ai/: __init__.py  assistant.py
backend/core/: client_service.py  security.py  settings.py
backend/middleware/: language.py
backend/migrations/: 001_initial.sql
backend/repositories/: user.py
backend/schemas/: auth.py  language.py  user.py
backend/translations/en/: messages.py
docs/: ESTADO_PROYECTO.md  README.md  REGISTRO_CAMBIOS.md  __init__.py
frontend/: .gitignore  README.md  __init__.py
frontend/admin-panel/: __init__.py
frontend/chat-widget/: README.md  __init__.py  package-lock.json  package.json
frontend/client-panel/: __doc__.md  __init__.py  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/client-platform/: middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/landing-page/: next.config.js  package-lock.json  package.json  package.json.backup  page.tsx  tailwind.config.ts  translations.ts
frontend/nia-landing/: package-lock.json
models/: __init__.py  chat.py  document.py  query.py  result.py
services/: __init__.py  chat_service.py
src/app/: layout.tsx  page.tsx
tests/: __init__.py
(+149 files in other folders)
